--- a/titanic-survival.ipynb
+++ b/titanic-survival.ipynb
@@ -22,20 +22,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e6277a81",
-   "metadata": {},
-   "source": [
-    "# Idees de resolutions\n",
-    "je vais essayer une approche croisee entre trois solutions : \n",
-    "- Une random forest\n",
-    "- Un regression logistic\n",
-    "- Un reseau de neurones avec des calques denses assez simples\n",
-    "\n",
-    "Dans l'idee je voudrais que les modeles aient des accuracy pas tres eloignes, et je ferai voter mes models pour la meilleure solution possible"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 64,
    "id": "749c2508",
@@ -50,7 +36,7 @@
    "id": "b99db001",
    "metadata": {},
    "source": [
-    "# Analyse du dataset"
+    "# Dataset Analysis"
    ]
   },
   {
